--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,45 +4,49 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" 
+  integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" 
+  crossorigin="anonymous"></script>
   <title>Hobby Blogs</title>
 </head>
 
-  <div class="wrapper">
-    <header>
-        <h1 class="has-text-black px-3 py-3 has-text-weight-bold">Hobby Blog: Also a Tech Blog</h1>
-        <nav class="navbar mt-2">
-            <a href="/" class="navbar-item is-hoverable pt-1">HomePage</a>
-            <a href="/dashboard" class="navbar-item is-hoverable pt-1">Dashboard</a>
-            <a href="/dashboard/create/" class="navbar-item is-hoverable pt-1 mr-4">Create a Post</a>
-            <button id="logout" class="button is-danger">Logout</button>
-            <a href="/" class="navbar-item is-hoverable pt-1">Homepage</a>
-            <a href="/login" class="button is-primary">Login</a>
-        </nav>
-    </header>
+<div class="wrapper">
+  <header>
+    <h1 class="has-text-black px-3 py-3 has-text-weight-bold">Hobby Blog: Also a Tech Blog</h1>
+    <nav class="navbar mt-2">
+      <a href="/" class="navbar-item is-hoverable pt-1">HomePage</a>
+      <a href="/dashboard" class="navbar-item is-hoverable pt-1">Dashboard</a>
+      <a href="/dashboard/create/" class="navbar-item is-hoverable pt-1 mr-4">Create a Post</a>
+      <button id="logout" class="button is-danger">Logout</button>
+      <a href="/" class="navbar-item is-hoverable pt-1">Homepage</a>
+      <a href="/login" class="button is-primary">Login</a>
+    </nav>
+  </header>
 
-    <main>
-            {{{ body }}}
-    </main>
+  <main>
+    {{{ body }}}
+  </main>
 
-    <footer class="footer rows pb-2">
-        <div class="row-is-full content has-text-centered">
-            <p>
-            <a href="/">Homepage</a>
-             | 
-            <a href="/dashboard/">Dashboard</a> | 
-            <a href="/dashboard/create/">Create a New Post</a>
-             | <a href="/login/">Login</a>
-            </p>
-        </div>
-      <div class="row-is-full content has-text-centered">
-    <p>
-      <strong>Hobby Blogs</strong> by <a href="https://github.com/ashwinilh">Ashwini Lalitha Huchahanumegowda</a> | source code:
-      <a href="https://github.com/ashwinilh/tech-blog"><i class="fab fa-github"></i></a> |  
-       <a href="mailto:ashwini.lh12@gmail.com"><i class="far fa-envelope"></i></a>
-    </p>
-  </div>
-    </footer>
-  </div>
+  <footer class="footer rows pb-2">
+    <div class="row-is-full content has-text-centered">
+      <p>
+        <a href="/">Homepage</a>
+        |
+        <a href="/dashboard/">Dashboard</a> |
+        <a href="/dashboard/create/">Create a New Post</a>
+        | <a href="/login/">Login</a>
+      </p>
+    </div>
+    <div class="row-is-full content has-text-centered">
+      <p>
+        <strong>Hobby Blogs</strong> by <a href="https://github.com/ashwinilh">Ashwini Lalitha Huchahanumegowda</a> |
+        source code: <a href="https://github.com/ashwinilh/tech-blog"><i class="fab fa-github"></i></a> |
+        <a href="mailto:ashwini.lh12@gmail.com"><i class="far fa-envelope"></i></a>
+      </p>
+    </div>
+  </footer>
+</div>
 
 </body>
 
