--- a/public/style/style.css
+++ b/public/style/style.css
@@ -5,3 +5,33 @@ header {
   align-items: center;
   padding: 0 1%;
 }
+
+form>div {
+  margin-bottom: 2%;
+}
+
+form label {
+  display: block;
+}
+
+textarea,
+input {
+  padding: .5%;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+textarea:focus,
+input:focus {
+  outline: none;
+  border: 1px solid #3486eb;
+}
+
+textarea {
+  min-width: 40%;
+  min-height: 100px;
+}
+
+.center-align {
+  text-align: center;
+}
