--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,8 +3,8 @@
   <hr>
   <form class="login-form">
     <div>
-      <label for="username">Username:</label>
-      <input type="text" id="username" />
+      <label for="email-login">Email:</label>
+    <input type="text" id="email-login" />
     </div>
     <div>
       <label for="password">Password:</label>
