edit and delete post

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,8 +36,7 @@
     <div class="row-is-full content has-text-centered">
       <p>
         <a href="/">Homepage</a>
-        {{#if loggedIn}}
-        |
+        {{#if loggedIn}} |
         <a href="/dashboard/">Dashboard</a> |
         <a href="/dashboard/create/">Create a New Post</a>
         {{else}}
