--- a/views/create-post.handlebars
+++ b/views/create-post.handlebars
@@ -2,7 +2,7 @@
   <a href="/dashboard" class="is-pulled-right"> &larr; Back to Dashboard</a>
   <h2 class="title">Create A Post</h2>
   <hr>
-  <form class="new-post-form">
+  <form class="post-form">
     <div>
       <label for="post-title">
         Post-Name:
@@ -21,4 +21,4 @@
   </form>
 </section>
 
-<script src="/javascript/create-post.js"></script>
+<script src="/scripts/create-post.js"></script>
