--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -11,5 +11,5 @@
 {{/if}}
 {{> comments post.comments}}
 {{#if loggedIn}}
-  <script src="/javascript/comment.js"></script>
+  <script src="/scripts/comment.js"></script>
 {{/if}}
